deploy my react app to github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://thefurqanrahim.github.io/userdata",
+  "homepage": "http://thefurqanrahim.github.io/interviewtest",
   "name": "test",
   "version": "0.1.0",
   "private": true,
